footer: fixed wrapping on smaller phones

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -10,3 +10,9 @@
   .copyrightSection p {
     margin: 0;
   }
+
+  @media screen and (max-width: 576px) {
+    .copyrightSection {
+      font-size: x-small;
+    }
+  }
