--- a/src/styles.css
+++ b/src/styles.css
@@ -280,12 +280,6 @@ body {
   transition: .5s;
 }
 
-@media screen and (min-width: 992px) {
-  /* .nav-logo {
-    margin-left: 50px;
-  } */
-}
-
 @media screen and (max-width: 993px) {
   #navigation li:hover {
     transition: .3s;
